--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "fast-two-sms": "^3.0.0",
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
-    "stripe": "^11.6.0"
+    "razorpay": "^2.8.4"
   }
 }
