--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "fast-two-sms": "^3.0.0",
+    "json2csv": "^5.0.7",
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
     "razorpay": "^2.8.4"
