--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "json2csv": "^5.0.7",
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.0",
     "razorpay": "^2.8.4"
   }
 }
