--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.0",
+    "puppeteer": "^19.6.0",
     "razorpay": "^2.8.4"
   }
 }
